[gd_scene load_steps=32 format=2]

[ext_resource path="res://CommonScripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/liesma6.png" type="Texture" id=2]
[ext_resource path="res://Level1/Particle_systems/ORANGE.tres" type="Texture" id=3]
[ext_resource path="res://Level1/Particle_systems/size_curve.tres" type="Curve" id=4]
[ext_resource path="res://Player/light.png" type="Texture" id=5]
[ext_resource path="res://Player/liesma5.png" type="Texture" id=6]
[ext_resource path="res://Player/liesma9.png" type="Texture" id=7]
[ext_resource path="res://Player/liesma10.png" type="Texture" id=8]
[ext_resource path="res://Player/liesma12.png" type="Texture" id=9]
[ext_resource path="res://Player/liesma15.png" type="Texture" id=10]
[ext_resource path="res://Player/liesma7.png" type="Texture" id=11]
[ext_resource path="res://Player/Particles.png" type="Texture" id=12]
[ext_resource path="res://Player/liesma8.png" type="Texture" id=13]
[ext_resource path="res://Player/liesma11.png" type="Texture" id=14]
[ext_resource path="res://Player/liesma13.png" type="Texture" id=15]
[ext_resource path="res://Player/liesma14.png" type="Texture" id=16]
[ext_resource path="res://Player/liesma16.png" type="Texture" id=17]
[ext_resource path="res://Player/liesma17.png" type="Texture" id=18]
[ext_resource path="res://Player/liesma18.png" type="Texture" id=19]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 34.265, 46.3384 )

[sub_resource type="CurveTexture" id=2]
curve = ExtResource( 4 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = -150.0
angular_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.2
scale_curve = SubResource( 2 )
color_ramp = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 34.5724, 80 )

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -700, 0 ), Vector2( -1400, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1.1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1.5, 1.5 ), Vector2( 1.5, 1.5 ), Vector2( 2, 2 ) ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -700, 0 ) ]
}

[sub_resource type="Animation" id=9]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.5, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:texture_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.8, 5.0, 0.8 ]
}

[sub_resource type="Animation" id=10]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 3.0, 0.8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0 ]
}

[sub_resource type="Animation" id=11]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.8, 3.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0 ]
}

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 2 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 14 ), ExtResource( 9 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 10 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "Idle",
"speed": 8.0
} ]

[node name="Player" type="KinematicBody2D"]
pause_mode = 2
z_index = 1
z_as_relative = false
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 44 )
shape = SubResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
pause_mode = 2
modulate = Color( 1, 1, 1, 0.901961 )
light_mask = 1024
position = Vector2( 1, 80 )
rotation = 1.5708
z_index = 1
amount = 10
lifetime = 1.5
speed_scale = 0.6
explosiveness = 0.1
randomness = 0.1
fract_delta = false
local_coords = false
process_material = SubResource( 3 )
texture = ExtResource( 12 )

[node name="Camera2D" type="Camera2D" parent="."]
pause_mode = 2
current = true
zoom = Vector2( 2, 2 )

[node name="Light2D" type="Light2D" parent="."]
light_mask = 3
position = Vector2( 0, 27 )
texture = ExtResource( 5 )
texture_scale = 0.8
mode = 2
range_layer_min = -1
shadow_color = Color( 0, 0, 0, 1 )
shadow_gradient_length = 377.3
shadow_filter = 1

[node name="DamageChecker" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DamageChecker"]
position = Vector2( 0, 10 )
shape = SubResource( 4 )

[node name="Memory" type="Timer" parent="."]
pause_mode = 1
process_mode = 0
wait_time = 2.0

[node name="Stunned" type="Timer" parent="."]
wait_time = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AnotherPage = SubResource( 5 )
anims/Damaged = SubResource( 6 )
anims/FadeOut = SubResource( 7 )
anims/Paused = SubResource( 8 )

[node name="LightControll" type="AnimationPlayer" parent="."]
anims/DamagedShine = SubResource( 9 )
anims/ZoomIn = SubResource( 10 )
anims/ZoomOut = SubResource( 11 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
light_mask = 2
scale = Vector2( 0.7, 0.8 )
frames = SubResource( 12 )
animation = "Idle"
frame = 1
playing = true

[connection signal="area_entered" from="DamageChecker" to="." method="_on_DamageChecker_area_entered"]
[connection signal="timeout" from="Memory" to="." method="_on_Memory_timeout"]
[connection signal="timeout" from="Stunned" to="." method="_on_Stunned_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="LightControll" to="." method="_on_LightControll_animation_finished"]
